# vcpkg_stats

./: .gitignore  CMakeLists.txt  main.cpp
